--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 myhdl
 pytest
 git+https://github.com/Insper/bits-e-proc-tools
-git+https://github.com/insper-education/telemetry-pytest
+#git+https://github.com/insper-education/telemetry-pytest
